huggingface-tokenizer：各种分词模型整理

--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -2093,21 +2093,46 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3fbc61c-8173-4315-862e-4a0a4a90f794",
+   "id": "f4260283-7862-4d79-9b4e-b780ac77f971",
    "metadata": {},
    "source": [
     "### 分词模型\n",
     "\n",
     "参考文档：\n",
     "+ [Course --> 6. The tokenizers library -> Normalization and pre-tokenization](https://huggingface.co/course/chapter6/4?fw=pt#normalization-and-pre-tokenization)\n",
-    "+ [Course --> 6. The tokenizers library -> Byte-Pair Encoding tokenization](https://huggingface.co/course/chapter6/5?fw=pt#byte-pair-encoding-tokenization)\n",
-    "+ [Course --> 6. The tokenizers library -> WordPiece tokenization](https://huggingface.co/course/chapter6/6?fw=pt#wordpiece-tokenization)\n",
-    "+ [Course --> 6. The tokenizers library -> Unigram tokenization](https://huggingface.co/course/chapter6/7?fw=pt#unigram-tokenization)\n",
     "\n",
-    "主要分为如下几类：\n",
-    "+ Byte-Pair Encoding(BPE)\n",
-    "+ WordPiece\n",
-    "+ Unigram"
+    "主要分为如下几类："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab423dfe-64ef-40cd-939b-fc85ba88b8e4",
+   "metadata": {},
+   "source": [
+    "#### Byte-Pair Encoding(BPE)\n",
+    "\n",
+    "参考文档：[Course --> 6. The tokenizers library -> Byte-Pair Encoding tokenization](https://huggingface.co/course/chapter6/5?fw=pt#byte-pair-encoding-tokenization)\n",
+    "\n",
+    "BPE最初是用来对文本进行压缩的，后来被OpenAI用于GPT中的分词，现在被用于GPT, GPT-2, BART等模型中。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "799b3252-8b6a-4690-b4f9-bc042ab690f2",
+   "metadata": {},
+   "source": [
+    "#### WordPiece\n",
+    "\n",
+    "参考文档：[Course --> 6. The tokenizers library -> WordPiece tokenization](https://huggingface.co/course/chapter6/6?fw=pt#wordpiece-tokenization)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bdd11ca-637b-4942-8fd0-20205104a34a",
+   "metadata": {},
+   "source": [
+    "#### Unigram\n",
+    "参考文档：[Course --> 6. The tokenizers library -> Unigram tokenization](https://huggingface.co/course/chapter6/7?fw=pt#unigram-tokenization)\n"
    ]
   },
   {
