huggingface-tokenizer3大分词模型整理

--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -2113,7 +2113,37 @@
     "\n",
     "参考文档：[Course --> 6. The tokenizers library -> Byte-Pair Encoding tokenization](https://huggingface.co/course/chapter6/5?fw=pt#byte-pair-encoding-tokenization)\n",
     "\n",
-    "BPE最初是用来对文本进行压缩的，后来被OpenAI用于GPT中的分词，现在被用于GPT, GPT-2, BART等模型中。"
+    "BPE最初是用来对文本进行压缩的，后来被OpenAI用于GPT中的分词，现在被用于GPT, GPT-2, BART等模型中。\n",
+    "\n",
+    "设初始的语料及其单词频数为：`(\"hug\", 10), (\"pug\", 5), (\"pun\", 12), (\"bun\", 4), (\"hugs\", 5)`，BPE产生词表的**训练过程**如下：\n",
+    "1. 首先**将语料里出现的所有单词拆成最基本的字母，形成最基本的词表**：\n",
+    "```shell\n",
+    "Vocabulary: [\"b\", \"g\", \"h\", \"n\", \"p\", \"s\", \"u\"]\n",
+    "Corpus: (\"h\" \"u\" \"g\", 10), (\"p\" \"u\" \"g\", 5), (\"p\" \"u\" \"n\", 12), (\"b\" \"u\" \"n\", 4), (\"h\" \"u\" \"g\" \"s\", 5)\n",
+    "```\n",
+    "2. 再**逐步合并，向词表中增加新的token，每次增加的token是频数最高的那个**，当前频数最高的是 `(\"u\", \"g\")`，频数为10+5+5=20，所以合并为 `(\"u\", \"g\") -> \"ug\"`，合并后的词表以及语料为：   \n",
+    "```shell\n",
+    "Vocabulary: [\"b\", \"g\", \"h\", \"n\", \"p\", \"s\", \"u\", \"ug\"]\n",
+    "Corpus: (\"h\" \"ug\", 10), (\"p\" \"ug\", 5), (\"p\" \"u\" \"n\", 12), (\"b\" \"u\" \"n\", 4), (\"h\" \"ug\" \"s\", 5)\n",
+    "```\n",
+    "3. 接下来合并的是`(\"u\", \"n\") -> \"un\"`，频数为 12+4=16，合并后的词表以及语料为：\n",
+    "```shell\n",
+    "Vocabulary: [\"b\", \"g\", \"h\", \"n\", \"p\", \"s\", \"u\", \"ug\", \"un\"]\n",
+    "Corpus: (\"h\" \"ug\", 10), (\"p\" \"ug\", 5), (\"p\" \"un\", 12), (\"b\" \"un\", 4), (\"h\" \"ug\" \"s\", 5)\n",
+    "```\n",
+    "4. 再进行一次合并，`(\"h\", \"ug\") -> \"hug\"`：\n",
+    "```shell\n",
+    "Vocabulary: [\"b\", \"g\", \"h\", \"n\", \"p\", \"s\", \"u\", \"ug\", \"un\", \"hug\"]\n",
+    "Corpus: (\"hug\", 10), (\"p\" \"ug\", 5), (\"p\" \"un\", 12), (\"b\" \"un\", 4), (\"hug\" \"s\", 5)\n",
+    "```\n",
+    "\n",
+    "BPE的**分词流程**为：\n",
+    "1. Normalization\n",
+    "2. Pre-tokenization\n",
+    "3. 将每个word分割成字符\n",
+    "4. 将训练过程中学到的merge规则应用到分割后的字符上\n",
+    "\n",
+    "比如`bug`这个单词，会被分词成`[\"b\", \"ug\"]`，`mug`则被分词成`[\"[UNK]\", \"ug\"]`"
    ]
   },
   {
@@ -2123,7 +2153,39 @@
    "source": [
     "#### WordPiece\n",
     "\n",
-    "参考文档：[Course --> 6. The tokenizers library -> WordPiece tokenization](https://huggingface.co/course/chapter6/6?fw=pt#wordpiece-tokenization)"
+    "参考文档：[Course --> 6. The tokenizers library -> WordPiece tokenization](https://huggingface.co/course/chapter6/6?fw=pt#wordpiece-tokenization)\n",
+    "\n",
+    "WordPiece分词多用于BERT相关的模型中，比如DistilBERT等，**但Google没有开源WordPiece的具体实现**。\n",
+    "\n",
+    "它的训练过程和BPE有点类似，都是从一个初始的基本词表开始，逐步合并。不过WordPiece会给每个subword前面附加一个特殊的前缀符号`##`，比如`word`这个单词，一开始会被分割成`[w, ##o, ##r, ##d]` 这样的基本词。因此初始的词表，都是由语料中出现过的单词首字母+带有特殊前缀的后续字母构成。\n",
+    "\n",
+    "合并过程中，WordPiece不是合并频数最高的，而是使用类似于TF-IDF那样的得分来决定优先合并哪些subword。\n",
+    "\n",
+    "设初始的语料及其单词频数仍然为：`(\"hug\", 10), (\"pug\", 5), (\"pun\", 12), (\"bun\", 4), (\"hugs\", 5)`，**训练过程**大致如下：\n",
+    "1. 初始的词表以及分割为：\n",
+    "```shell\n",
+    "Vocabulary: [\"b\", \"h\", \"p\", \"##g\", \"##n\", \"##s\", \"##u\"]\n",
+    "Corpus: (\"h\" \"##u\" \"##g\", 10), (\"p\" \"##u\" \"##g\", 5), (\"p\" \"##u\" \"##n\", 12), (\"b\" \"##u\" \"##n\", 4), (\"h\" \"##u\" \"##g\" \"##s\", 5)\n",
+    "```\n",
+    "2. 假设根据得分，第一个合并规则为：`(\"##g\", \"##s\") -> (\"##gs\")`:\n",
+    "```shell\n",
+    "Vocabulary: [\"b\", \"h\", \"p\", \"##g\", \"##n\", \"##s\", \"##u\", \"##gs\"]\n",
+    "Corpus: (\"h\" \"##u\" \"##g\", 10), (\"p\" \"##u\" \"##g\", 5), (\"p\" \"##u\" \"##n\", 12), (\"b\" \"##u\" \"##n\", 4), (\"h\" \"##u\" \"##gs\", 5)\n",
+    "```\n",
+    "3. 接下来的合并规则为：`(\"h\", \"##u\") -> \"hu\"`:\n",
+    "```shell\n",
+    "Vocabulary: [\"b\", \"h\", \"p\", \"##g\", \"##n\", \"##s\", \"##u\", \"##gs\", \"hu\"]\n",
+    "Corpus: (\"hu\" \"##g\", 10), (\"p\" \"##u\" \"##g\", 5), (\"p\" \"##u\" \"##n\", 12), (\"b\" \"##u\" \"##n\", 4), (\"hu\" \"##gs\", 5)\n",
+    "```\n",
+    "4. 下一个合并规则为：`(\"hu\", \"##g\") -> \"hug\"`：\n",
+    "```shell\n",
+    "Vocabulary: [\"b\", \"h\", \"p\", \"##g\", \"##n\", \"##s\", \"##u\", \"##gs\", \"hu\", \"hug\"]\n",
+    "Corpus: (\"hug\", 10), (\"p\" \"##u\" \"##g\", 5), (\"p\" \"##u\" \"##n\", 12), (\"b\" \"##u\" \"##n\", 4), (\"hu\" \"##gs\", 5)\n",
+    "```\n",
+    "\n",
+    "WordPiece的分词过程和BPE不一样，它只使用最终得到的词表，而不是中间的合并规则。对于待分词的对象，WordPiece会使用词表中最长的subword来进行分词。 \n",
+    "\n",
+    "比如对于`hugs`这个词，使用上面得到的词表，会分成`[\"hug\", \"##s\"]`；对于未知的词，比如`mug`，整个单词会被标记为`\"[UNK]\"`，而不是进行subword划分。"
    ]
   },
   {
@@ -2132,7 +2194,13 @@
    "metadata": {},
    "source": [
     "#### Unigram\n",
-    "参考文档：[Course --> 6. The tokenizers library -> Unigram tokenization](https://huggingface.co/course/chapter6/7?fw=pt#unigram-tokenization)\n"
+    "参考文档：[Course --> 6. The tokenizers library -> Unigram tokenization](https://huggingface.co/course/chapter6/7?fw=pt#unigram-tokenization)\n",
+    "\n",
+    "Unigram 分词通常被用在 **SentencePiece**（谷歌发布的一个工具包） 中，该分词算法常用于ALBERT, T5, mBART等模型中。\n",
+    "\n",
+    "Unigram和BPE、WordPiece的方向不一样，它是先构建一个尽可能大的基础词表，然后尝试从中移除token，直到达到指定的词表规模。\n",
+    "\n",
+    "Unigram的原理比较复杂，这里就不详细介绍了。"
    ]
   },
   {
