--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -5116,9 +5116,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "40b0dcfc-066e-4ed0-af8e-460c820ec1dc",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e356ac3-0973-48fd-8889-bc63dda4138f",
+   "metadata": {},
+   "source": [
+    "## 其他工具\n",
+    "\n",
+    "huggingface-transformer还提供了其他的一些工具"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "792f18df-0f9e-4aee-9ea6-2fe5f2301f8f",
+   "metadata": {},
+   "source": [
+    "### 命令行解析\n",
+    "\n",
+    "主要是`HfArgumentParser` 这个类，它继承与`argparse.ArgumentParser`，主要是用于将参数解析成 `dataclass` 定义的容器类里，常用的使用方式如下："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7c29b635-ee7e-4227-bc06-fc304d5e0b3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "\n",
+    "# 定义多个 dataclass 的类\n",
+    "@dataclass\n",
+    "class A:\n",
+    "    a: str\n",
+    "    param_a: str\n",
+    "\n",
+    "@dataclass\n",
+    "class B:\n",
+    "    b: str\n",
+    "    param_b: str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "33db1236-2669-4295-8533-6a53e2f5ea39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import HfArgumentParser\n",
+    "\n",
+    "parser = HfArgumentParser([A, B])\n",
+    "args = \"--a a1 --param_a a2 --b b1 --param_b b2\".split(' ')\n",
+    "a_args, b_args = parser.parse_args_into_dataclasses(args=args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "55c1c9cb-a010-4da4-a91f-d5d55b235f9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A(a='a1', param_a='a2')\n",
+      "B(b='b1', param_b='b2')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a_args)\n",
+    "print(b_args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "452ee6ba-acbc-4759-b9a5-a2d98000a299",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.A"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(a_args)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f09736c9-6677-40be-b415-2067578a2764",
+   "id": "7fd75962-aa79-4cce-845b-9ed50efde240",
    "metadata": {},
    "outputs": [],
    "source": []
