transformer Trainer-API练习

--- a/DeepLearning-Actions/01-pytorch-tutorial.ipynb
+++ b/DeepLearning-Actions/01-pytorch-tutorial.ipynb
@@ -1486,7 +1486,7 @@
     "1. 继承 `nn.Module` 抽象基类，\n",
     "2. 在初始化方法`__init__()`中，存放网络中可学习的参数，并使用`nn.Parameters()`封装\n",
     "3. 实现`nn.Module`抽象类中的前向传播方法`forward()`，梯度的反向传播方法不需要自己写，PyTorch会自动生成\n",
-    "4. 调用时可以是 `net.forward(X)`，也可以直接使用 `net(X)`\n",
+    "4. 调用时直接使用 `net(X)`，会自动调用 `net.forward(X)` —— pytorch**不建议直接调用`.forward()`方法**\n",
     "5. 网络的可学习参数可以通过网络实例对象的`.parameters()` 或者 `.named_parameters()` 返回\n",
     "\n",
     "\n",
@@ -1869,10 +1869,6 @@
    "cell_type": "code",
    "execution_count": 195,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -5348,9 +5344,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "deep-learning(Python3.7.13)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "deep-learning"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5362,7 +5358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.13"
   },
   "toc-autonumbering": true
  },
