--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "ed7e7753-2202-4b5e-9ff9-aa3cd1cbc052",
    "metadata": {},
    "outputs": [],
@@ -5113,6 +5113,289 @@
     "> **稍微看了下`Trainer`的源码，发现其中添加了许多逻辑，比如参数检查，最大batch_size的检查，各种回调方法，多GPU的支持，梯度修剪等等。  \n",
     "我的感觉是，这个API可以用，但是不要滥用，其中封装了许多对于初学者来说不必要的逻辑。  \n",
     "不过如果作为研究的对象还不错，其中有许多优化求解的操作，应该值得研究。**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ead0005e-e4cc-4452-842e-79d67219b231",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from datasets import load_dataset\n",
+    "from transformers import DataCollatorWithPadding, BertTokenizerFast, BertForSequenceClassification\n",
+    "from transformers import TrainingArguments, Trainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0fcf0cf2-4ae5-4524-acab-1d160a50331b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at C:\\Users\\Drivi\\Python-Projects\\DataAnalysis\\bert-pretrained-models\\bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.bias']\n",
+      "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at C:\\Users\\Drivi\\Python-Projects\\DataAnalysis\\bert-pretrained-models\\bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
+   "source": [
+    "checkpoint = os.path.join(LOCAL_MODELS_PATH, \"bert-base-uncased\")\n",
+    "tokenizer = BertTokenizerFast.from_pretrained(checkpoint)\n",
+    "model = BertForSequenceClassification.from_pretrained(checkpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "29c3d397-03a7-476a-8058-827386f98f6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found cached dataset glue (C:/Users/Drivi/.cache/huggingface/datasets/glue/mrpc/1.0.0/dacbe3125aa31d7f70367a07a8a9e72a5a0bfeb5fc42e75c9db75b96da6053ad)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "98f856ae9f374b78882acd729dc1edd9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
+       "        num_rows: 3668\n",
+       "    })\n",
+       "    validation: Dataset({\n",
+       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
+       "        num_rows: 408\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
+       "        num_rows: 1725\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_datasets = load_dataset(\"glue\", \"mrpc\")\n",
+    "raw_datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8d4fb989-9841-4285-8e4c-ecbe7185b751",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a87800f4e2d94f4fb031c4dd9bbf1e9a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ccf7423df8c74eb7814221856b52716a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ad744d5c2aff48ada954326a8cc95c10",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def tokenize_function(example):\n",
+    "    return tokenizer(example[\"sentence1\"], example[\"sentence2\"], truncation=True)\n",
+    "\n",
+    "tokenized_datasets = raw_datasets.map(tokenize_function, batched=True)\n",
+    "\n",
+    "data_collator = DataCollatorWithPadding(tokenizer=tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "18da8471-f51d-40a5-9a31-f51af93090b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TrainingArguments 是一个 dataclass 修饰的专门用于存储常见训练参数的类\n",
+    "training_args = TrainingArguments(output_dir=\"test-trainer\")\n",
+    "# print(training_args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4b4fae9d-f974-4c75-ad00-a9a923a9ab2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 构造 Trainer\n",
+    "trainer = Trainer(\n",
+    "    model=model,\n",
+    "    args=training_args,\n",
+    "    train_dataset=tokenized_datasets[\"train\"],\n",
+    "    eval_dataset=tokenized_datasets[\"validation\"],\n",
+    "    data_collator=data_collator,\n",
+    "    tokenizer=tokenizer,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f8927651-6c7d-4a76-8fa8-4952581cf25a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The following columns in the training set don't have a corresponding argument in `BertForSequenceClassification.forward` and have been ignored: sentence1, sentence2, idx. If sentence1, sentence2, idx are not expected by `BertForSequenceClassification.forward`,  you can safely ignore this message.\n",
+      "C:\\Users\\Drivi\\miniconda3\\envs\\deep-learning\\lib\\site-packages\\transformers\\optimization.py:306: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "  warnings.warn(\n",
+      "***** Running training *****\n",
+      "  Num examples = 3668\n",
+      "  Num Epochs = 3\n",
+      "  Instantaneous batch size per device = 8\n",
+      "  Total train batch size (w. parallel, distributed & accumulation) = 8\n",
+      "  Gradient Accumulation steps = 1\n",
+      "  Total optimization steps = 1377\n",
+      "You're using a BertTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='1377' max='1377' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [1377/1377 02:29, Epoch 3/3]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Step</th>\n",
+       "      <th>Training Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>500</td>\n",
+       "      <td>0.549300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.319400</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Saving model checkpoint to test-trainer\\checkpoint-500\n",
+      "Configuration saved in test-trainer\\checkpoint-500\\config.json\n",
+      "Model weights saved in test-trainer\\checkpoint-500\\pytorch_model.bin\n",
+      "tokenizer config file saved in test-trainer\\checkpoint-500\\tokenizer_config.json\n",
+      "Special tokens file saved in test-trainer\\checkpoint-500\\special_tokens_map.json\n",
+      "Saving model checkpoint to test-trainer\\checkpoint-1000\n",
+      "Configuration saved in test-trainer\\checkpoint-1000\\config.json\n",
+      "Model weights saved in test-trainer\\checkpoint-1000\\pytorch_model.bin\n",
+      "tokenizer config file saved in test-trainer\\checkpoint-1000\\tokenizer_config.json\n",
+      "Special tokens file saved in test-trainer\\checkpoint-1000\\special_tokens_map.json\n",
+      "\n",
+      "\n",
+      "Training completed. Do not forget to share your model on huggingface.co/models =)\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=1377, training_loss=0.3610895969942158, metrics={'train_runtime': 152.539, 'train_samples_per_second': 72.139, 'train_steps_per_second': 9.027, 'total_flos': 406183858377360.0, 'train_loss': 0.3610895969942158, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 进行训练\n",
+    "trainer.train()"
    ]
   },
   {
