--- a/DeepLearning-Actions/01-pytorch-tutorial.ipynb
+++ b/DeepLearning-Actions/01-pytorch-tutorial.ipynb
@@ -939,12 +939,12 @@
      "evalue": "Trying to backward through the graph a second time, but the buffers have already been freed. Specify retain_graph=True when calling backward the first time.",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/cj/qcn3hpb10hq63mcjy_vb7x100000gn/T/ipykernel_15891/354524408.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 重复执行反向求导会报错\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/Shared/miniconda3/envs/tensorflow1.15/lib/python3.7/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    116\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m         \"\"\"\n\u001b[0;32m--> 118\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    119\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    120\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/Shared/miniconda3/envs/tensorflow1.15/lib/python3.7/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     91\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     92\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Trying to backward through the graph a second time, but the buffers have already been freed. Specify retain_graph=True when calling backward the first time."
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mRuntimeError\u001B[0m                              Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/cj/qcn3hpb10hq63mcjy_vb7x100000gn/T/ipykernel_15891/354524408.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0;31m# 重复执行反向求导会报错\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 2\u001B[0;31m \u001B[0mc\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mbackward\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;32m/Users/Shared/miniconda3/envs/tensorflow1.15/lib/python3.7/site-packages/torch/tensor.py\u001B[0m in \u001B[0;36mbackward\u001B[0;34m(self, gradient, retain_graph, create_graph)\u001B[0m\n\u001B[1;32m    116\u001B[0m                 \u001B[0mproducts\u001B[0m\u001B[0;34m.\u001B[0m \u001B[0mDefaults\u001B[0m \u001B[0mto\u001B[0m\u001B[0;31m \u001B[0m\u001B[0;31m`\u001B[0m\u001B[0;31m`\u001B[0m\u001B[0;32mFalse\u001B[0m\u001B[0;31m`\u001B[0m\u001B[0;31m`\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    117\u001B[0m         \"\"\"\n\u001B[0;32m--> 118\u001B[0;31m         \u001B[0mtorch\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mautograd\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mbackward\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mgradient\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mretain_graph\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mcreate_graph\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    119\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    120\u001B[0m     \u001B[0;32mdef\u001B[0m \u001B[0mregister_hook\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mhook\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/Users/Shared/miniconda3/envs/tensorflow1.15/lib/python3.7/site-packages/torch/autograd/__init__.py\u001B[0m in \u001B[0;36mbackward\u001B[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001B[0m\n\u001B[1;32m     91\u001B[0m     Variable._execution_engine.run_backward(\n\u001B[1;32m     92\u001B[0m         \u001B[0mtensors\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mgrad_tensors\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mretain_graph\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mcreate_graph\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 93\u001B[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001B[0m\u001B[1;32m     94\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     95\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mRuntimeError\u001B[0m: Trying to backward through the graph a second time, but the buffers have already been freed. Specify retain_graph=True when calling backward the first time."
      ]
     }
    ],
@@ -2260,10 +2260,12 @@
     "+ 对于 2D 来说，输入为 shape=(N,C,H,W)，2D 指的就是后面的两个维度 (H,W)，同样计算的是 C 这个维度的统计量，也就是计算 (N,H,W) 这个 slice 的统计量，下同\n",
     "+ 对于 3D 来说，输入为 shape=(N,C,D,H,W)，3D 指的就是后面的三个维度 (D,H,W)\n",
     "\n",
-    "> batch-normalization的位置是本层神经元的输入，并且必须要在激活函数之前执行，它是对一个 batch 中的 每个特征（也就是对应于该层的同一个神经元） 独立的进行规范化。\n",
+    "> batch-normalization的位置是本层神经元的输入，并且必须要在激活函数之前执行，它是对一个 batch 中的 **每个**特征（也就是对应于该层的同一个神经元） 独立的进行规范化。\n",
     "\n",
     "BN中，每个 batch 都会计算一个方差和均值，用于当前 batch 的规范化，`tracking_running_stats=True` 时，这些均值和方差**序列**（长度为batch的个数）会被记录下来，**均值序列的均值**和**方差序列的均值** 会被作为BN推理过程中的均值和方差的估计，用于规范化测试数据。  \n",
-    "如果设置为 `tracking_running_stats=False`，那么推理过程中，会使用测试数据的均值和方差。"
+    "如果设置为 `tracking_running_stats=False`，那么推理过程中，会使用测试数据的均值和方差。\n",
+    "\n",
+    "> 注意，模型的 `train()` 或者 `eval()` 模式对于 Batch-Normalization 层的工作是有影响的。"
    ]
   },
   {
@@ -2383,7 +2385,9 @@
     "  + `eps`：也用于保持数值计算的稳定性\n",
     "  + `elementwise_affine`：是否进行仿射变换，默认True\n",
     "  \n",
-    "+ 输入/输出：shape一样，都是 (N, *)"
+    "+ 输入/输出：shape一样，都是 (N, *)\n",
+    "\n",
+    "> 注意，模型的`train()` 和 `eval()` 模式对于 Layer-Normalization 没有影响."
    ]
   },
   {
@@ -2428,7 +2432,7 @@
    "source": [
     "+ 传入单个维度\n",
     "计算的是 每个样本中，embedding_dim 这个维度的所有特征的规范化。  \n",
-    "比如第一个样本的 `[1,1]` ，计算均值和方差，再做标准化后为 `[0,0]`，第二个样本的 `[1,2]` 标准化为 `[-1,1]`"
+    "比如这里传入的 `embedding_dim=2`，表示的是最后一个维度，第一个样本的最后一个维度的 `[1,1]` ，计算均值和方差，再做标准化后为 `[0,0]`，第二个样本的 `[1,2]` 标准化为 `[-1,1]`"
    ]
   },
   {
@@ -2464,7 +2468,8 @@
    "source": [
     "+ 传入多个维度\n",
     "\n",
-    "此时计算的是 每个样本中，(sentence_length, embedding_dim) 这两个维度 所有特征的规范化。   \n"
+    "此时计算的是 每个样本中，(sentence_length, embedding_dim) 这两个维度 所有特征的规范化。   \n",
+    "具体来说，就是针对 batch 中 每个样本的 `sentenc_length` x `embedding_dim` 个数字求均值和方差。"
    ]
   },
   {
@@ -2532,9 +2537,12 @@
     "\n",
     "`nn.Dropout(p=0.5, inplace=False)`.\n",
     "\n",
-    "底层调用的是`functional.dropout()`函数.\n",
+    "底层调用的是`functional.dropout()`函数. 它根据概率`p`，对于输入tensor里的各个元素，随机赋值为0，剩余的元素会乘以缩放系数 $\\frac{1}{1-p}$. \n",
     "\n",
-    "根据概率`p`，对于输入tensor里的各个元素，随机赋值为0，剩余的元素会乘以缩放系数 $\\frac{1}{1-p}$."
+    "> 这种进行缩放的 dropout 被称为 **inverted dropout**，原因是：训练的时候以概率 $p$ 对当前层的所有神经元进行丢弃，只剩下了 $1-p$ 比例的神经元，而预测时使用当前层所有的神经元，这样预测时当前层的神经元总输出是训练时的 $\\frac{1}{1-p}$ 倍，为了弥补这种差距，干脆就在训练时，随机丢弃后，对剩下的神经元都乘以这个系数，保证期望和预测时一致，这样预测时就不用做改动了，比较方便。   \n",
+    "\n",
+    "参考回答：\n",
+    "+ [神经网络Dropout层中为什么dropout后还需要进行rescale？](https://www.zhihu.com/question/61751133). "
    ]
   },
   {
