--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "terminal-riding",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "ed7e7753-2202-4b5e-9ff9-aa3cd1cbc052",
    "metadata": {},
    "outputs": [],
@@ -3568,8 +3568,7 @@
    "cell_type": "markdown",
    "id": "92032d02-a793-406e-980c-96a48711b739",
    "metadata": {
-    "tags": [],
-    "toc-hr-collapsed": true
+    "tags": []
    },
    "source": [
     "### BERT\n",
@@ -3627,19 +3626,21 @@
     "  + 为了兼容上述3种情况，它的`forward`方法里，可以传入的参数很多，用于控制具体实现哪里的self-attention.\n",
     "  + **输出最多为 长度=3 的 tuple**：`(context_layer, attention_probs, past_key_value)`\n",
     "    + `context_layer` 是 self-attention 最后的计算结果\n",
-    "    + `attention_probs` 是 ${\\rm softmax}(\\frac{ {\\rm query} \\cdot {\\rm key}^T}{\\sqrt{d_k}})$ 的结果\n",
-    "    + `past_key_value` 是一个 长度=2 的 tuple：`(key, value)`，存放的是 decoder 中第二层的 cross-self-attention 需要传入的 key,value.    \n",
+    "    + `attention_probs` 是 ${\\rm softmax}(\\frac{ {\\rm query} \\cdot {\\rm key}^T}{\\sqrt{d_k}})$ 的结果，`output_attentions=True` 时输出\n",
+    "    + `past_key_value` 是一个 长度=2 的 tuple：`(key, value)`，存放的是 decoder 中第二层的 cross-self-attention 需要传入的 key,value. `config.is_decoder=True` 时输出.    \n",
     "  .\n",
     "\n",
     "\n",
-    "+ `BertSelfOutput`：实现transformer里的 self-attention 之后的 **Add & Norm** 操作\n",
+    "+ `BertSelfOutput`：实现transformer里的 self-attention 之后的 **Add & Norm** 操作.    \n",
+    "实际上，在这里还增加了一个Linear + Dropout 的操作。\n",
     "  \n",
     "+ `BertAttention`：封装了 `BertSelfAttention` + `BertSelfOutput`，形成一个 **Attention** 层\n",
-    "  + 输出：和 `BertSelfAttention` 相同，只是对 `context_layer` 进行了 Add & Norm 处理，其他保持不变   \n",
+    "  + 输出：和 `BertSelfAttention` 相同，只是将 `context_layer` 传入`BertSelfOutput`进行了 Add & Norm 处理，其他保持不变   \n",
     "  .\n",
     "\n",
     "\n",
-    "+ `BertIntermediate`: 内部是一个 linear 层 + 激活函数，也就是 Attention 层后面的 **FeedForward** 全连接层\n",
+    "+ `BertIntermediate`: 内部是一个 Linear 层 + 激活函数，也就是 Attention 层后面的 **FeedForward** 全连接层\n",
+    "\n",
     "+ `BertOutput`：这个和 `BertSelfOutput` 没有区别，只是为了实现 FeedForward 层后面的 **Add & Norm** 操作\n",
     "\n",
     "\n",
@@ -3651,7 +3652,7 @@
     "  **输出：长度=4 的tuple**: `(context_layer, attention_probs, cross_attention_probs, past_key_value)`\n",
     "  + `context_layer` 是 输出的状态向量，它可能经过了两个 `BertAttention` 层\n",
     "  + `attention_probs` 是第一个 `BertAttentnion` 层的输出\n",
-    "  + `cross_attention_probs` 是第二个 `BertAttentnion`(cross-attention) 层输出的\n",
+    "  + `cross_attention_probs` 是第二个 `BertAttentnion`(cross-attention) 层的输出\n",
     "  + `past_key_value` 现在可能是一个 长度=4 的tuple: `(key, value, cross_attention_key, cross_attention_value)`，前两个是第一个self-attention的输出，后两个是 cross-attention的输出.    \n",
     "  .\n",
     "\n",
@@ -3677,7 +3678,7 @@
     "+ **`BertPooler`-KEY**：内部是一个 Linear + tanh激活函数，也就是一个全连接层，但是它**只会处理 `BertLayer` 输出的第一个 token 的隐藏层状态**。   \n",
     "对应 BERT 的 Masked-Language-Model 训练方式里，第一个 token `[CLS]` 的输出，**它不会改变隐藏层状态向量的维度**.\n",
     "\n",
-    "+ `BertPredictionHeadTransform`：内部是一个 全连接层(Linear+激活函数) + LayerNorm，它会处理 `BertLayer` 输出的所有序列的隐藏层状态，相当于对 `BertLayer` 或者 `BertEncoder` 的输出做一次 FeedForward 处理，它**不会改变隐藏层状态向量的维度**。\n",
+    "+ `BertPredictionHeadTransform`：内部是一个 全连接层（Linear+激活函数） + LayerNorm，它会处理 `BertLayer` 输出的所有序列的隐藏层状态，相当于对 `BertLayer` 或者 `BertEncoder` 的输出做一次 FeedForward 处理，它**不会改变隐藏层状态向量的维度**。\n",
     "\n",
     "+ **`BertLMPredictionHead`-KEY**：内部是一个 `BertPredictionHeadTransform` + Linear，其中线性变换会改变隐藏层向量维度：`hidden_size` --> `vocab_size`。  \n",
     "名称中的\"LM\"应该指的是Language Model，也就是说这一层是为了用于语言模型对transformer-encoder的输出进行的变换。\n",
@@ -3754,7 +3755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "gentle-wages",
    "metadata": {},
    "outputs": [],
@@ -3764,46 +3765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "841cd289-c307-4257-a0dc-d8d15035ffba",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "D:\\Project-Workspace\\Python-Projects\\DataAnalysis\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd .."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "tired-metadata",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'D:\\\\Project-Workspace\\\\Python-Projects\\\\DataAnalysis'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "useful-vacuum",
    "metadata": {
     "tags": []
@@ -3813,9 +3775,61 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at .\\bert-pretrained-models\\bert-base-uncased were not used when initializing BertModel: ['cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.weight']\n",
-      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+      "loading configuration file C:\\Users\\Drivi\\Python-Projects\\DataAnalysis\\bert-pretrained-models\\bert-base-uncased\\config.json\n",
+      "Model config BertConfig {\n",
+      "  \"architectures\": [\n",
+      "    \"BertForMaskedLM\"\n",
+      "  ],\n",
+      "  \"attention_probs_dropout_prob\": 0.1,\n",
+      "  \"classifier_dropout\": null,\n",
+      "  \"hidden_act\": \"gelu\",\n",
+      "  \"hidden_dropout_prob\": 0.1,\n",
+      "  \"hidden_size\": 768,\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"intermediate_size\": 3072,\n",
+      "  \"layer_norm_eps\": 1e-12,\n",
+      "  \"max_position_embeddings\": 512,\n",
+      "  \"model_type\": \"bert\",\n",
+      "  \"num_attention_heads\": 12,\n",
+      "  \"num_hidden_layers\": 12,\n",
+      "  \"pad_token_id\": 0,\n",
+      "  \"position_embedding_type\": \"absolute\",\n",
+      "  \"transformers_version\": \"4.23.1\",\n",
+      "  \"type_vocab_size\": 2,\n",
+      "  \"use_cache\": true,\n",
+      "  \"vocab_size\": 30522\n",
+      "}\n",
+      "\n",
+      "loading file vocab.txt\n",
+      "loading file added_tokens.json\n",
+      "loading file special_tokens_map.json\n",
+      "loading file tokenizer_config.json\n",
+      "loading configuration file C:\\Users\\Drivi\\Python-Projects\\DataAnalysis\\bert-pretrained-models\\bert-base-uncased\\config.json\n",
+      "Model config BertConfig {\n",
+      "  \"_name_or_path\": \"C:\\\\Users\\\\Drivi\\\\Python-Projects\\\\DataAnalysis\\\\bert-pretrained-models\\\\bert-base-uncased\",\n",
+      "  \"architectures\": [\n",
+      "    \"BertForMaskedLM\"\n",
+      "  ],\n",
+      "  \"attention_probs_dropout_prob\": 0.1,\n",
+      "  \"classifier_dropout\": null,\n",
+      "  \"hidden_act\": \"gelu\",\n",
+      "  \"hidden_dropout_prob\": 0.1,\n",
+      "  \"hidden_size\": 768,\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"intermediate_size\": 3072,\n",
+      "  \"layer_norm_eps\": 1e-12,\n",
+      "  \"max_position_embeddings\": 512,\n",
+      "  \"model_type\": \"bert\",\n",
+      "  \"num_attention_heads\": 12,\n",
+      "  \"num_hidden_layers\": 12,\n",
+      "  \"pad_token_id\": 0,\n",
+      "  \"position_embedding_type\": \"absolute\",\n",
+      "  \"transformers_version\": \"4.23.1\",\n",
+      "  \"type_vocab_size\": 2,\n",
+      "  \"use_cache\": true,\n",
+      "  \"vocab_size\": 30522\n",
+      "}\n",
+      "\n"
      ]
     },
     {
@@ -3829,8 +3843,7 @@
     }
    ],
    "source": [
-    "# model_name = \"./bert-pretrained-models/bert-base-uncased\"   # mac\n",
-    "model_name = r\".\\bert-pretrained-models\\bert-base-uncased\"    # windows\n",
+    "model_name = os.path.join(LOCAL_MODELS_PATH, \"bert-base-uncased\")\n",
     "\n",
     "config = BertConfig.from_pretrained(model_name, local_files_only=True)\n",
     "tokenizer = BertTokenizer.from_pretrained(pretrained_model_name_or_path=model_name, local_files_only=True)\n",
@@ -3847,7 +3860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "resistant-locking",
    "metadata": {},
    "outputs": [
@@ -3884,7 +3897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "15c26e6d-220d-4973-aa6e-79e974af6a64",
    "metadata": {},
    "outputs": [
@@ -3909,14 +3922,14 @@
        "  \"num_hidden_layers\": 12,\n",
        "  \"pad_token_id\": 0,\n",
        "  \"position_embedding_type\": \"absolute\",\n",
-       "  \"transformers_version\": \"4.22.1\",\n",
+       "  \"transformers_version\": \"4.23.1\",\n",
        "  \"type_vocab_size\": 2,\n",
        "  \"use_cache\": true,\n",
        "  \"vocab_size\": 30522\n",
        "}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3928,7 +3941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "anticipated-operations",
    "metadata": {},
    "outputs": [
@@ -3938,7 +3951,7 @@
        "transformers.modeling_outputs.BaseModelOutputWithPoolingAndCrossAttentions"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3957,7 +3970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "higher-program",
    "metadata": {},
    "outputs": [
@@ -3967,7 +3980,7 @@
        "torch.Size([2, 14, 768])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3980,7 +3993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "relevant-mother",
    "metadata": {},
    "outputs": [
@@ -3990,7 +4003,7 @@
        "torch.Size([2, 768])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4002,7 +4015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 26,
    "id": "frank-consolidation",
    "metadata": {},
    "outputs": [
@@ -4019,7 +4032,7 @@
        "tuple"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4032,7 +4045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 27,
    "id": "wrong-allergy",
    "metadata": {},
    "outputs": [
@@ -4042,7 +4055,7 @@
        "torch.Size([2, 14, 768])"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4054,7 +4067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 28,
    "id": "isolated-order",
    "metadata": {},
    "outputs": [
@@ -4064,7 +4077,7 @@
        "torch.Size([2, 14, 768])"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4076,7 +4089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 29,
    "id": "baking-revolution",
    "metadata": {},
    "outputs": [
@@ -4093,7 +4106,7 @@
        "tuple"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4106,7 +4119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 30,
    "id": "protected-event",
    "metadata": {},
    "outputs": [
@@ -4116,7 +4129,7 @@
        "torch.Size([2, 12, 14, 14])"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4248,7 +4261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "honey-homeless",
    "metadata": {},
    "outputs": [],
@@ -4258,7 +4271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "id": "latter-laptop",
    "metadata": {},
    "outputs": [
@@ -4266,7 +4279,90 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of BertForPreTraining were not initialized from the model checkpoint at ./BERT/bert-pre-trained-models/bert-base-uncased and are newly initialized: ['cls.predictions.decoder.bias']\n",
+      "loading configuration file C:\\Users\\Drivi\\Python-Projects\\DataAnalysis\\bert-pretrained-models\\bert-base-uncased\\config.json\n",
+      "Model config BertConfig {\n",
+      "  \"architectures\": [\n",
+      "    \"BertForMaskedLM\"\n",
+      "  ],\n",
+      "  \"attention_probs_dropout_prob\": 0.1,\n",
+      "  \"classifier_dropout\": null,\n",
+      "  \"hidden_act\": \"gelu\",\n",
+      "  \"hidden_dropout_prob\": 0.1,\n",
+      "  \"hidden_size\": 768,\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"intermediate_size\": 3072,\n",
+      "  \"layer_norm_eps\": 1e-12,\n",
+      "  \"max_position_embeddings\": 512,\n",
+      "  \"model_type\": \"bert\",\n",
+      "  \"num_attention_heads\": 12,\n",
+      "  \"num_hidden_layers\": 12,\n",
+      "  \"pad_token_id\": 0,\n",
+      "  \"position_embedding_type\": \"absolute\",\n",
+      "  \"transformers_version\": \"4.23.1\",\n",
+      "  \"type_vocab_size\": 2,\n",
+      "  \"use_cache\": true,\n",
+      "  \"vocab_size\": 30522\n",
+      "}\n",
+      "\n",
+      "loading file vocab.txt\n",
+      "loading file added_tokens.json\n",
+      "loading file special_tokens_map.json\n",
+      "loading file tokenizer_config.json\n",
+      "loading configuration file C:\\Users\\Drivi\\Python-Projects\\DataAnalysis\\bert-pretrained-models\\bert-base-uncased\\config.json\n",
+      "Model config BertConfig {\n",
+      "  \"_name_or_path\": \"C:\\\\Users\\\\Drivi\\\\Python-Projects\\\\DataAnalysis\\\\bert-pretrained-models\\\\bert-base-uncased\",\n",
+      "  \"architectures\": [\n",
+      "    \"BertForMaskedLM\"\n",
+      "  ],\n",
+      "  \"attention_probs_dropout_prob\": 0.1,\n",
+      "  \"classifier_dropout\": null,\n",
+      "  \"hidden_act\": \"gelu\",\n",
+      "  \"hidden_dropout_prob\": 0.1,\n",
+      "  \"hidden_size\": 768,\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"intermediate_size\": 3072,\n",
+      "  \"layer_norm_eps\": 1e-12,\n",
+      "  \"max_position_embeddings\": 512,\n",
+      "  \"model_type\": \"bert\",\n",
+      "  \"num_attention_heads\": 12,\n",
+      "  \"num_hidden_layers\": 12,\n",
+      "  \"pad_token_id\": 0,\n",
+      "  \"position_embedding_type\": \"absolute\",\n",
+      "  \"transformers_version\": \"4.23.1\",\n",
+      "  \"type_vocab_size\": 2,\n",
+      "  \"use_cache\": true,\n",
+      "  \"vocab_size\": 30522\n",
+      "}\n",
+      "\n",
+      "loading configuration file C:\\Users\\Drivi\\Python-Projects\\DataAnalysis\\bert-pretrained-models\\bert-base-uncased\\config.json\n",
+      "Model config BertConfig {\n",
+      "  \"architectures\": [\n",
+      "    \"BertForMaskedLM\"\n",
+      "  ],\n",
+      "  \"attention_probs_dropout_prob\": 0.1,\n",
+      "  \"classifier_dropout\": null,\n",
+      "  \"hidden_act\": \"gelu\",\n",
+      "  \"hidden_dropout_prob\": 0.1,\n",
+      "  \"hidden_size\": 768,\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"intermediate_size\": 3072,\n",
+      "  \"layer_norm_eps\": 1e-12,\n",
+      "  \"max_position_embeddings\": 512,\n",
+      "  \"model_type\": \"bert\",\n",
+      "  \"num_attention_heads\": 12,\n",
+      "  \"num_hidden_layers\": 12,\n",
+      "  \"pad_token_id\": 0,\n",
+      "  \"position_embedding_type\": \"absolute\",\n",
+      "  \"transformers_version\": \"4.23.1\",\n",
+      "  \"type_vocab_size\": 2,\n",
+      "  \"use_cache\": true,\n",
+      "  \"vocab_size\": 30522\n",
+      "}\n",
+      "\n",
+      "loading weights file C:\\Users\\Drivi\\Python-Projects\\DataAnalysis\\bert-pretrained-models\\bert-base-uncased\\pytorch_model.bin\n",
+      "All model checkpoint weights were used when initializing BertForPreTraining.\n",
+      "\n",
+      "Some weights of BertForPreTraining were not initialized from the model checkpoint at C:\\Users\\Drivi\\Python-Projects\\DataAnalysis\\bert-pretrained-models\\bert-base-uncased and are newly initialized: ['cls.predictions.decoder.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -4281,7 +4377,7 @@
     }
    ],
    "source": [
-    "model_name = \"./BERT/bert-pre-trained-models/bert-base-uncased\"\n",
+    "model_name = os.path.join(LOCAL_MODELS_PATH, \"bert-base-uncased\")\n",
     "# model_name = \"./BERT/bert-pre-trained-models/distilbert-base-uncased/\"\n",
     "\n",
     "config = BertConfig.from_pretrained(model_name, local_files_only=True)\n",
@@ -4413,6 +4509,23 @@
     "+ `forward()`方法\n",
     "\n",
     "+ 返回的是`SequenceClassifierOutput()`类对象"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb9fa79d-5123-4480-9fe1-69ee589306c9",
+   "metadata": {},
+   "source": [
+    "#### BertForTokenClassification\n",
+    "\n",
+    "内部是 `BertModel` + `Dropout` + `Linear`，其中的 `BertModel` 参数为 `add_pooling_layer=False`。\n",
+    "\n",
+    "线性层为：\n",
+    "```python\n",
+    "self.classifier = nn.Linear(config.hidden_size, config.num_labels)\n",
+    "```\n",
+    "\n",
+    "也就是将序列中的每个token进行分类，类别个数为 `config.num_labels`。"
    ]
   },
   {
